[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
bitvec = "1.0.1"
clap = { version = "4.5.21", features = ["derive"] }
hashbag = "0.1.12"
itertools = "0.13.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"

[profile.release]
debug = true
